@@ -1,3 +1,8 @@
+2007-07-03  Robert Widhopf-Fenk  <fenk@forwiss.de>
+
+	* lisp/bbdb-gnus.el (bbdb/gnus-summary-get-author): Added handling
+	of `gnus-ignored-from-addresses' and `gnus-summary-to-prefix'.
+
 2007-05-12  Robert Widhopf-Fenk  <bbdb@robf.de>
 
 	* lisp/bbdb-com.el (bbdb-define-all-aliases): Rewrite to handle
